--- a/src/main/resources/ku/cs/login.fxml
+++ b/src/main/resources/ku/cs/login.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.LoginController">
     <children>
         <Label layoutX="383.0" layoutY="43.0" text="Login">
@@ -18,7 +17,7 @@
         <TextField fx:id="passwordTextField" layoutX="326.0" layoutY="215.0" />
         <Label layoutX="326.0" layoutY="98.0" text="username" />
         <Label layoutX="326.0" layoutY="188.0" text="password" />
-        <Button layoutX="379.0" layoutY="287.0" mnemonicParsing="false" text="login" onAction="#handleLoginButton"/>
-        <Button layoutX="375.0" layoutY="341.0" mnemonicParsing="false" text="register"/>
+        <Button layoutX="379.0" layoutY="287.0" mnemonicParsing="false" onAction="#handleLoginButton" text="login" />
+        <Button layoutX="375.0" layoutY="341.0" mnemonicParsing="false" onAction="#handleRegisterButton" text="register" />
     </children>
 </AnchorPane>
