--- a/src/main/resources/ku/cs/login.fxml
+++ b/src/main/resources/ku/cs/login.fxml
@@ -17,7 +17,8 @@
         <TextField fx:id="passwordTextField" layoutX="326.0" layoutY="215.0" />
         <Label layoutX="326.0" layoutY="98.0" text="username" />
         <Label layoutX="326.0" layoutY="188.0" text="password" />
-        <Button layoutX="379.0" layoutY="287.0" mnemonicParsing="false" onAction="#handleLoginButton" text="login" />
-        <Button layoutX="375.0" layoutY="341.0" mnemonicParsing="false" onAction="#handleRegisterButton" text="register" />
+        <Button layoutX="375.0" layoutY="290.0" mnemonicParsing="false" onAction="#handleLoginButton" text="login" />
+        <Button layoutX="375.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleRegisterButton" text="register" />
+        <Button layoutX="375.0" layoutY="390.0" mnemonicParsing="false" onAction="#handleOfficerRegisterButton" text="officer register" />
     </children>
 </AnchorPane>
