--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.HomeController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.HomeController">
     <children>
         <Button layoutX="699.0" layoutY="38.0" mnemonicParsing="false" text="login" onAction="#handleLoginButton">
             <font>
