--- a/src/main/resources/ku/cs/login.fxml
+++ b/src/main/resources/ku/cs/login.fxml
@@ -2,23 +2,30 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.LoginController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.LoginController">
     <children>
-        <Label layoutX="383.0" layoutY="43.0" text="Login">
+      <Button layoutX="85.0" layoutY="420.0" mnemonicParsing="false" onAction="#handleResetPasswordButton" prefHeight="25.0" prefWidth="130.0" text="Forgot Password?" />
+        <Label layoutX="367.0" layoutY="25.0" text="Login">
             <font>
-                <Font size="14.0" />
+                <Font size="27.0" />
             </font>
         </Label>
-        <TextField fx:id="usernameTextField" layoutX="326.0" layoutY="132.0" />
-        <TextField fx:id="passwordTextField" layoutX="326.0" layoutY="215.0" />
-        <Label layoutX="326.0" layoutY="98.0" text="username" />
-        <Label layoutX="326.0" layoutY="188.0" text="password" />
-        <Button layoutX="375.0" layoutY="290.0" mnemonicParsing="false" onAction="#handleLoginButton" text="login" />
-        <Button layoutX="375.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleRegisterButton" text="register" />
-        <Button layoutX="375.0" layoutY="390.0" mnemonicParsing="false" onAction="#handleOfficerRegisterButton" text="officer register" />
+        <TextField fx:id="usernameTextField" layoutX="75.0" layoutY="161.0" />
+        <Label layoutX="122.0" layoutY="98.0" text="Username" />
+        <Label layoutX="124.0" layoutY="226.0" text="password" />
+        <Button layoutX="127.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleLoginButton" text="Login" />
+        <Button layoutX="468.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleRegisterButton" text="Sign up" />
+        <Button layoutX="620.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleOfficerRegisterButton" text="Officer Sign up" />
+      <Label layoutX="480.0" layoutY="220.0" text="Don't have any account? ">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <PasswordField fx:id="passwordPasswordField" layoutX="76.0" layoutY="288.0" />
     </children>
 </AnchorPane>
