--- a/src/main/resources/ku/cs/officer_registration.fxml
+++ b/src/main/resources/ku/cs/officer_registration.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ku.cs.shop.controllers.OfficeRegistrationController"
-            prefHeight="600.0" prefWidth="800.0">
+
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.OfficeRegistrationController">
     <children>
         <Label layoutX="374.0" layoutY="87.0" text="Register">
             <font>
@@ -26,11 +23,6 @@
         <Label layoutX="326.0" layoutY="350.0" text="Password" />
         <Label layoutX="325.0" layoutY="410.0" text="Confirm Password" />
         <Button layoutX="372.0" layoutY="490.0" mnemonicParsing="false" onAction="#handleSubmitButton" text="Submit" />
-        <Label fx:id="errorNoticeLabel" layoutX="325.0" layoutY="150.0" text="errorNoticeLabel" textFill="RED">
-            <font>
-                <Font name="System Bold" size="12.0" />
-            </font>
-        </Label>
         <PasswordField fx:id="newPasswordPasswordField" layoutX="325.0" layoutY="370.0" />
         <PasswordField fx:id="confirmPasswordPasswordField" layoutX="325.0" layoutY="430.0" />
     </children>
