--- a/src/main/resources/ku/cs/registration.fxml
+++ b/src/main/resources/ku/cs/registration.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.RegistrationController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.RegistrationController">
    <children>
       <Label layoutX="374.0" layoutY="87.0" text="Register">
          <font>
@@ -21,11 +21,6 @@
       <Label layoutX="325.0" layoutY="291.0" text="Password" />
       <Label layoutX="325.0" layoutY="354.0" text="Confirm Password" />
       <Button layoutX="372.0" layoutY="410.0" mnemonicParsing="false" onAction="#handleSubmitButton" text="Submit" />
-      <Label fx:id="errorNoticeLabel" layoutX="325.0" layoutY="150.0" text="errorNoticeLabel" textFill="RED">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
       <PasswordField fx:id="newPasswordPasswordField" layoutX="325.0" layoutY="310.0" />
       <PasswordField fx:id="confirmPasswordPasswordField" layoutX="325.0" layoutY="370.0" />
    </children>
