--- a/src/main/resources/ku/cs/login.fxml
+++ b/src/main/resources/ku/cs/login.fxml
@@ -10,7 +10,7 @@
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.LoginController">
     <children>
       <Button layoutX="85.0" layoutY="420.0" mnemonicParsing="false" onAction="#handleResetPasswordButton" prefHeight="25.0" prefWidth="130.0" text="Forgot Password?" />
-        <Label layoutX="367.0" layoutY="25.0" text="Login">
+        <Label layoutX="367.0" layoutY="25.0" text="Sign in">
             <font>
                 <Font size="27.0" />
             </font>
@@ -18,7 +18,7 @@
         <TextField fx:id="usernameTextField" layoutX="75.0" layoutY="161.0" />
         <Label layoutX="122.0" layoutY="98.0" text="Username" />
         <Label layoutX="124.0" layoutY="226.0" text="password" />
-        <Button layoutX="127.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleLoginButton" text="Login" />
+        <Button layoutX="127.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleLoginButton" text="Sign in" />
         <Button layoutX="468.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleRegisterButton" text="Sign up" />
         <Button layoutX="620.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleOfficerRegisterButton" text="Officer Sign up" />
       <Label layoutX="480.0" layoutY="220.0" text="Don't have any account? ">
