--- a/src/main/resources/ku/cs/officer_registration.fxml
+++ b/src/main/resources/ku/cs/officer_registration.fxml
@@ -25,6 +25,7 @@
         <Button layoutX="372.0" layoutY="490.0" mnemonicParsing="false" onAction="#handleSubmitButton" text="Submit" />
         <PasswordField fx:id="newPasswordPasswordField" layoutX="325.0" layoutY="370.0" />
         <PasswordField fx:id="confirmPasswordPasswordField" layoutX="325.0" layoutY="430.0" />
+      <Button layoutX="71.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleBackButton" text="Back" />
     </children>
 
 </AnchorPane>
