--- a/src/main/resources/ku/cs/registration.fxml
+++ b/src/main/resources/ku/cs/registration.fxml
@@ -9,20 +9,22 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.RegistrationController">
    <children>
+      <Label layoutX="327.0" layoutY="194.0" text="Lastname" />
       <Label layoutX="374.0" layoutY="87.0" text="Register">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="newNameTextField" layoutX="325.0" layoutY="190.0" />
-      <TextField fx:id="newUsernameTextField" layoutX="325.0" layoutY="250.0" />
-      <Label layoutX="325.0" layoutY="171.0" text="Name" />
-      <Label layoutX="325.0" layoutY="229.0" text="Username" />
-      <Label layoutX="325.0" layoutY="291.0" text="Password" />
-      <Label layoutX="325.0" layoutY="354.0" text="Confirm Password" />
-      <Button layoutX="372.0" layoutY="410.0" mnemonicParsing="false" onAction="#handleSubmitButton" text="Submit" />
-      <PasswordField fx:id="newPasswordPasswordField" layoutX="325.0" layoutY="310.0" />
-      <PasswordField fx:id="confirmPasswordPasswordField" layoutX="325.0" layoutY="370.0" />
+      <TextField fx:id="newNameTextField" layoutX="325.0" layoutY="169.0" />
+      <TextField fx:id="newUsernameTextField" layoutX="325.0" layoutY="300.0" />
+      <Label layoutX="325.0" layoutY="143.0" text="Name" />
+      <Label layoutX="325.0" layoutY="272.0" text="Username" />
+      <Label layoutX="327.0" layoutY="333.0" text="Password" />
+      <Label layoutX="325.0" layoutY="402.0" text="Confirm Password" />
+      <Button layoutX="373.0" layoutY="470.0" mnemonicParsing="false" onAction="#handleSubmitButton" text="Submit" />
+      <PasswordField fx:id="newPasswordPasswordField" layoutX="325.0" layoutY="362.0" />
+      <PasswordField fx:id="confirmPasswordPasswordField" layoutX="319.0" layoutY="430.0" />
       <Button layoutX="80.0" layoutY="522.0" mnemonicParsing="false" onAction="#handleBackButton" text="Back" />
+      <TextField fx:id="newLastnameTextField" layoutX="325.0" layoutY="223.0" />
    </children>
 </AnchorPane>
