--- a/src/main/resources/ku/cs/register_officer.fxml
+++ b/src/main/resources/ku/cs/register_officer.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.Admin.RegisterOfficerController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.RegisterOfficerController">
    <children>
       <Button layoutX="118.0" layoutY="533.0" mnemonicParsing="false" text="Back" />
       <Label layoutX="375.0" layoutY="45.0" text="Register">
