--- a/src/main/resources/ku/cs/home_admin.fxml
+++ b/src/main/resources/ku/cs/home_admin.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.Admin.HomeAdminController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.HomeAdminController">
    <children>
       <SplitPane dividerPositions="0.25826653306613223" layoutX="-4.0" layoutY="-2.0" prefHeight="600.0" prefWidth="800.0">
         <items>
