--- a/src/main/resources/ku/cs/report_insecurity.fxml
+++ b/src/main/resources/ku/cs/report_insecurity.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ku.cs.appeal_system.controllers.Admin.ReportInsecurityController"
+            fx:controller="ku.cs.appeal_system.controllers.ReportInsecurityController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
