--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -7,14 +7,20 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.HomeController">
     <children>
-        <Button layoutX="699.0" layoutY="38.0" mnemonicParsing="false" text="login" onAction="#handleLoginButton">
+        <Button layoutX="699.0" layoutY="38.0" mnemonicParsing="false" onAction="#handleLoginButton" text="login">
             <font>
                 <Font size="16.0" />
             </font></Button>
-        <Label layoutX="332.0" layoutY="36.0" text="homepage">
+        <Label layoutX="127.0" layoutY="205.0" text="WELCOME TO">
             <font>
                 <Font size="28.0" />
             </font>
         </Label>
+      <Label layoutX="74.0" layoutY="290.0" text="OUR REPORT PROJECT">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Button layoutX="169.0" layoutY="363.0" mnemonicParsing="false" onAction="#handleSubmittedButton" text="Submitted by." />
     </children>
 </AnchorPane>
