--- a/src/main/resources/ku/cs/login.fxml
+++ b/src/main/resources/ku/cs/login.fxml
@@ -26,5 +26,6 @@
          </font>
       </Label>
       <PasswordField fx:id="passwordPasswordField" layoutX="76.0" layoutY="288.0" />
+      <Button layoutX="721.0" layoutY="550.0" mnemonicParsing="false" text="Back" onAction="#handleBackButton"/>
     </children>
 </AnchorPane>
