--- a/src/main/resources/ku/cs/complaints_list.fxml
+++ b/src/main/resources/ku/cs/complaints_list.fxml
@@ -6,10 +6,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.ComplaintsListController">
    <children>
-      <ListView layoutX="27.0" layoutY="56.0" prefHeight="518.0" prefWidth="378.0" />
+      <ListView fx:id="complaintListView" layoutX="27.0" layoutY="56.0" prefHeight="518.0" prefWidth="378.0" />
       <Label layoutX="143.0" layoutY="18.0" prefHeight="27.0" prefWidth="146.0" text="List Of Complaints" textFill="#0007ff">
          <font>
             <Font size="18.0" />
@@ -21,9 +20,11 @@
          </font>
       </Label>
       <Label layoutX="466.0" layoutY="119.0" text="Topic" />
-      <Label layoutX="509.0" layoutY="119.0" prefHeight="18.0" prefWidth="232.0" text="complaintTopicLable" />
-      <Label layoutX="466.0" layoutY="155.0" text="Detail" />
-      <Label layoutX="509.0" layoutY="154.0" prefHeight="18.0" prefWidth="232.0" text="complaintDetailLable" />
+      <Label fx:id="complaintTopicLabel" layoutX="509.0" layoutY="119.0" prefHeight="18.0" prefWidth="232.0" text="complaintTopicLabel" />
+      <Label layoutX="466.0" layoutY="156.0" text="Detail" />
+      <Label fx:id="complaintDetailLabel" layoutX="509.0" layoutY="155.0" prefHeight="18.0" prefWidth="232.0" text="complaintDetailLabel" />
       <Button layoutX="745.0" layoutY="561.0" mnemonicParsing="false" onAction="#handleBackButton" text="Back" />
+      <Label layoutX="466.0" layoutY="193.0" text="Status" />
+      <Label fx:id="complaintStatusLabel" layoutX="509.0" layoutY="192.0" prefHeight="18.0" prefWidth="232.0" text="complaintStatusLabel" />
    </children>
 </AnchorPane>
