--- a/src/main/resources/ku/cs/home_officer.fxml
+++ b/src/main/resources/ku/cs/home_officer.fxml
@@ -2,18 +2,28 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.HomeOfficerController">
    <children>
-      <Button layoutX="345.0" layoutY="287.0" mnemonicParsing="false" onAction="#handleComplaintsButton" prefHeight="26.0" prefWidth="109.0" text="complaints" />
-      <Label layoutX="366.0" layoutY="68.0" text="Officer">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Button layoutX="379.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleLogoutButton" text="logout" />
+      <SplitPane dividerPositions="0.257" layoutX="-4.0" layoutY="-2.0" prefHeight="600.0" prefWidth="800.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <Label layoutX="32.0" layoutY="17.0" text="Officer">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="66.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleComplaintsButton" prefHeight="26.0" prefWidth="109.0" text="complaints" />
+                  <Button layoutX="129.0" layoutY="553.0" mnemonicParsing="false" onAction="#handleLogoutButton" text="Logout" />
+                  <Button layoutX="70.0" layoutY="181.0" mnemonicParsing="false" onAction="#handleResetPasswordButton" text="ResetPassword" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="599.0" prefWidth="562.0" />
+        </items>
+      </SplitPane>
    </children>
 </AnchorPane>
