--- a/src/main/resources/ku/cs/report_insecurity.fxml
+++ b/src/main/resources/ku/cs/report_insecurity.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ku.cs.appeal_system.controllers.ReportInsecurityController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.ReportInsecurityController">
+   <children>
+      <Button layoutX="714.0" layoutY="547.0" mnemonicParsing="false" text="Back" onAction="#handleBackButton"/>
+      <ListView layoutX="29.0" layoutY="87.0" prefHeight="485.0" prefWidth="656.0" />
+   </children>
 </AnchorPane>
