--- a/src/main/resources/ku/cs/user_name_list.fxml
+++ b/src/main/resources/ku/cs/user_name_list.fxml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.UsernameListController">
-
+   <children>
+      <ListView layoutX="27.0" layoutY="102.0" prefHeight="454.0" prefWidth="658.0" />
+      <Button layoutX="731.0" layoutY="544.0" mnemonicParsing="false" text="Back" onAction="#handleBackButton"/>
+      <Label layoutX="27.0" layoutY="57.0" text="User Account">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
