--- a/src/main/resources/ku/cs/submitted.fxml
+++ b/src/main/resources/ku/cs/submitted.fxml
@@ -25,7 +25,7 @@
       <Label layoutX="132.0" layoutY="215.0" text="Thanwaralee Thanestummaroj" />
       <Label layoutX="132.0" layoutY="242.0" text="Case" />
       <Label layoutX="131.0" layoutY="266.0" text="6410450150" />
-      <Label layoutX="515.0" layoutY="215.0" text="Ratchapho Paengbuddeen" />
+      <Label layoutX="515.0" layoutY="215.0" text="Ratchaphon Paengbuddeen" />
       <Label layoutX="515.0" layoutY="242.0" text="Tyty" />
       <Label layoutX="515.0" layoutY="266.0" text="6410450249" />
       <Label layoutX="131.0" layoutY="461.0" text="Nataya Akpichitmarn" />
