--- a/src/main/resources/ku/cs/home_student.fxml
+++ b/src/main/resources/ku/cs/home_student.fxml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane onDragDetected="#handleReportButton" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.HomeStudentController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.HomeStudentController">
    <children>
-      <Label layoutX="357.0" layoutY="104.0" text="Student">
+      <Label layoutX="523.0" layoutY="30.0" prefHeight="50.0" prefWidth="117.0" text="Status :">
          <font>
-            <Font size="24.0" />
+            <Font size="33.0" />
          </font>
       </Label>
-      <Button layoutX="374.0" layoutY="189.0" mnemonicParsing="false" onAction="#handleReportButton" text="Report" />
-      <Button layoutX="353.0" layoutY="256.0" mnemonicParsing="false" onAction="#handleResetPasswordButton" text="ResetPassword" />
-      <Button layoutX="37.0" layoutY="541.0" mnemonicParsing="false" onAction="#handleLogoutButton" text="Logout" />
+      <Label fx:id="typeLabel" layoutX="667.0" layoutY="37.0" text="textLabel">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
+      <ImageView fx:id="userImageView" fitHeight="158.0" fitWidth="161.0" layoutX="26.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="26.0" layoutY="224.0" text="Username :">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="userNameLabel" layoutX="117.0" layoutY="226.0" text="nameLabel" />
    </children>
 </AnchorPane>
