--- a/src/main/resources/ku/cs/user_name_list.fxml
+++ b/src/main/resources/ku/cs/user_name_list.fxml
@@ -3,17 +3,30 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.appeal_system.controllers.UsernameListController">
    <children>
-      <ListView layoutX="27.0" layoutY="102.0" prefHeight="454.0" prefWidth="658.0" />
-      <Button layoutX="731.0" layoutY="544.0" mnemonicParsing="false" text="Back" onAction="#handleBackButton"/>
+      <ListView fx:id="accountListView" layoutX="27.0" layoutY="102.0" prefHeight="454.0" prefWidth="402.0" />
+      <Button layoutX="735.0" layoutY="556.0" mnemonicParsing="false" onAction="#handleBackButton" text="Back" />
       <Label layoutX="27.0" layoutY="57.0" text="User Account">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
+      <ImageView fx:id="userImageView" fitHeight="124.0" fitWidth="136.0" layoutX="547.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="469.0" layoutY="245.0" text="Name :" />
+      <Label layoutX="467.0" layoutY="283.0" text="Lastname :" />
+      <Label layoutX="466.0" layoutY="321.0" text="Username :" />
+      <Label layoutX="469.0" layoutY="357.0" text="Status :" />
+      <Label layoutX="526.0" layoutY="245.0" />
+      <Label fx:id="nameLabel" layoutX="539.0" layoutY="245.0" text="nameLabel" />
+      <Label fx:id="lastnameLabel" layoutX="539.0" layoutY="283.0" text="lastnameLabel" />
+      <Label fx:id="usernameLabel" layoutX="539.0" layoutY="321.0" text="usernameLabel" />
+      <Label fx:id="statusLabel" layoutX="528.0" layoutY="357.0" text="statusLabel" />
+      <Button layoutX="470.0" layoutY="532.0" mnemonicParsing="false" onAction="#handleBanAccountButton" text="Ban" />
+      <Button layoutX="589.0" layoutY="532.0" mnemonicParsing="false" onAction="#handleUnBanAccountButton" text="Unban" />
    </children>
 </AnchorPane>
