--- a/src/main/resources/ku/cs/home_student.fxml
+++ b/src/main/resources/ku/cs/home_student.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -24,5 +25,6 @@
          </font>
       </Label>
       <Label fx:id="userNameLabel" layoutX="117.0" layoutY="226.0" text="nameLabel" />
+      <Button layoutX="523.0" layoutY="287.0" mnemonicParsing="false" onAction="#handleReportButton" text="Report" />
    </children>
 </AnchorPane>
